<?xml version="1.0" encoding="UTF-8"?>
<!-- Licensed to the Apache Software Foundation (ASF) under one or more
contributor
	license agreements. See the NOTICE file distributed with this work for
additional
	information regarding copyright ownership. The ASF licenses this file to
	you under the Apache License, Version 2.0 (the "License"); you may not use
	this file except in compliance with the License. You may obtain a copy of
	the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required
	by applicable law or agreed to in writing, software distributed under the
	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
	OF ANY KIND, either express or implied. See the License for the specific
	language governing permissions and limitations under the License. -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>at.ac.univie.nutrition.dita</groupId>
    <artifactId>dita-bom</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <name>Dita (Umbrella)</name>
    <description>Open Scientific Nutrition and Dietary Assessment (Umbrella)</description>
    <url>https://github.com/univie-nutrition/dita</url>

    <packaging>pom</packaging>

    <properties>
        <maven.compiler.release>24</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <spring-boot.version>4.0.0-SNAPSHOT</spring-boot.version>

        <causeway.version>4.0.0-SNAPSHOT</causeway.version>
        <causewaystuff.version>1.0.0-SNAPSHOT</causewaystuff.version>

        <indriya.version>2.2.3</indriya.version>

        <lombok.version>1.18.38</lombok.version>

        <mariadb.version>3.5.3</mariadb.version>
        <mssql-jdbc.version>12.10.0.jre11</mssql-jdbc.version>

        <owlapi.version>5.5.1</owlapi.version>

        <!-- testing -->
        <junit.version>5.12.1</junit.version>
        <surefire-plugin.argLine>-Xmx384m</surefire-plugin.argLine>
    </properties>

    <build>
        <resources>
            <resource>
                <filtering>false</filtering>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <filtering>false</filtering>
                <directory>src/main/java</directory>
                <includes>
                    <include>**</include>
                </includes>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <filtering>false</filtering>
                <directory>src/test/resources</directory>
            </testResource>
            <testResource>
                <filtering>false</filtering>
                <directory>src/test/java</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <compilerArgs>
                        <arg>${maven.compiler.arg}</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <parameters>true</parameters>
                    <compilerArgs>
                        <arg>-proc:full</arg>
                    </compilerArgs>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm</artifactId>
                        <version>9.8</version> <!-- in support of JDK24 as
                        build JVM - overrides 9.6 from v3.13.0-->
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.3</version>
                <configuration>
                    <printSummary>false</printSummary>
                    <argLine>${surefire-plugin.argLine}</argLine>
                    <forkCount>1C</forkCount>
                    <reuseForks>true</reuseForks>
                    <systemPropertyVariables>
                        <!-- allows tests to reduce verbosity, or conditionally
                        disable
                                 when run with surefire; e.g.:
                                 @DisabledIfSystemProperty(named = "isRunningWithSurefire", matches = "true")
                                 -->
                        <isRunningWithSurefire>true</isRunningWithSurefire>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <!-- Spring Boot 4 early access-->
    <repositories>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>https://repo.spring.io/snapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
        <pluginRepository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>https://repo.spring.io/snapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
        </pluginRepository>
    </pluginRepositories>

    <dependencyManagement>
        <dependencies>

            <!-- SUB MODULES -->

            <dependency>
                <groupId>at.ac.univie.nutrition.dita</groupId>
                <artifactId>dita-commons</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>at.ac.univie.nutrition.dita</groupId>
                <artifactId>dita-testing</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>at.ac.univie.nutrition.dita</groupId>
                <artifactId>dita-foodon</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>at.ac.univie.nutrition.dita</groupId>
                <artifactId>dita-causeway-replicator</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>at.ac.univie.nutrition.dita</groupId>
                <artifactId>dita-foodex-validator-api</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>at.ac.univie.nutrition.dita</groupId>
                <artifactId>dita-foodex-validator-service</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>at.ac.univie.nutrition.dita</groupId>
                <artifactId>dita-globodiet-cleaner</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>at.ac.univie.nutrition.dita</groupId>
                <artifactId>dita-globodiet-manager</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>at.ac.univie.nutrition.dita</groupId>
                <artifactId>dita-globodiet-params</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>at.ac.univie.nutrition.dita</groupId>
                <artifactId>dita-globodiet-survey</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>at.ac.univie.nutrition.dita</groupId>
                <artifactId>dita-recall24-dto</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>at.ac.univie.nutrition.dita</groupId>
                <artifactId>dita-recall24-reporter</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

            <!-- MEASURE API -->

            <dependency>
                <groupId>tech.units</groupId>
                <artifactId>indriya</artifactId>
                <version>${indriya.version}</version>
            </dependency>

            <!-- APACHE CAUSEWAY -->

            <dependency>
                <groupId>org.apache.causeway</groupId>
                <artifactId>causeway-bom</artifactId>
                <version>${causeway.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- UNPUBLISHED -->

            <dependency>
                <groupId>org.apache.causeway.tooling</groupId>
                <artifactId>causeway-tooling-model4adoc</artifactId>
                <version>${causeway.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.causeway.tooling</groupId>
                <artifactId>causeway-tooling-c4modeling</artifactId>
                <version>${causeway.version}</version>
            </dependency>

            <!-- CAUSEWAYSTUFF -->

            <dependency>
                <groupId>io.github.causewaystuff</groupId>
                <artifactId>causewaystuff-bom</artifactId>
                <version>${causewaystuff.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- SPRING -->

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- JDBC -->

            <dependency>
                <groupId>com.microsoft.sqlserver</groupId>
                <artifactId>mssql-jdbc</artifactId>
                <version>${mssql-jdbc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mariadb.jdbc</groupId>
                <artifactId>mariadb-java-client</artifactId>
                <version>${mariadb.version}</version>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <!-- version already managed -->
            </dependency>

            <!-- OTHER -->

            <dependency>
                <groupId>net.sourceforge.owlapi</groupId>
                <artifactId>owlapi-distribution</artifactId>
                <version>${owlapi.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <!-- TESTING -->

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- TESTING -->

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <modules>
        <module>commons</module>
        <module>testing</module>
        <module>foodon</module>
        <module>recall24</module>
        <module>causeway</module>
        <module>foodex</module>
        <module>globodiet</module>
    </modules>

    <!-- META DATA -->

    <inceptionYear>Nov 2022</inceptionYear>
    <scm>
        <url>https://github.com/univie-nutrition/dita</url>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/univie-nutrition/dita/issues</url>
    </issueManagement>
    <ciManagement>
        <system>GitHub</system>
        <url>https://github.com/univie-nutrition/dita/actions</url>
    </ciManagement>
    <developers>
        <developer>
            <id>ahuber</id>
            <name>Andi Huber</name>
            <email>a.huber@corax.at</email>
            <roles>
                <role>committer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
    </developers>

</project>
